# OQueue-Server

./: Cargo.toml
src/: configuration.rs  domain.rs  main.rs  routes_configure.rs
src/auth/: mod.rs
src/db/: actions.rs  mod.rs  models.rs  schema.rs
src/handlers/: mod.rs  req.rs
