[package]
name = "online_queue_server"
version = "0.1.0"
authors = ["vavus7 <vavus44375@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "^0.4.14"
env_logger = "^0.8.1"
dotenv = "^0.15"
serde = { version = "^1.0.123", features = ["derive"] }
chrono = { version = "^0.4.19", features = ["serde"] }
uuid = { version = "^0.8.2", features = ["serde", "v4"] }
bcrypt = "^0.9.0"

actix-web = "^3"
actix-rt = "^2.0.2"
#actix-service = "1.0.6"
actix-web-httpauth = "^0.5.0"

tokio = { version = "^1", features = ["full"] }

jsonwebtoken = "^7.2"

# validate email format
# addr = "0.2.0"

diesel = { version = "^1.4.5", features = ["postgres", "r2d2", "uuidv07", "chrono"] }
r2d2 = "^0.8.9"

